--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,11 @@ steps:
     javaHomeOption: 'JDKVersion'
     jdkVersionOption: '1.8'
     jdkArchitectureOption: 'x64'
-    #publishJUnitResults: true
-    #testResultsFiles: '**/target/surefire-reports/TEST-*.txt'
     goals: 'package'
+- task: PublishTestResults@2
+  inputs:
+    testResultsFormat: 'JUnit'
+    testResultsFiles: '**/target/surefire-reports/TEST-*.xml'
+- task: PublishCodeCoverageResults@2
+  inputs:
+    summaryFileLocation: 'target/site/jacoco/index.html'
