--- a/pom.xml
+++ b/pom.xml
@@ -138,7 +138,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.2</version>
+                <version>3.0.0-M1</version>
                 <configuration>
                     <argLine>${surefireArgLine}</argLine>
                 </configuration>
